# py-easy-scrape

./: .gitignore  LICENSE  README.md  basic_functions.py  pyproject.toml  setup.py  web_scraping_functions.py
py-easy-scrap/: basic_functions.py  web_scraping_functions.py
pyeasyscrape/: __init__.py  web_scraping_functions.py
