[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-easy-scrape"
version = "0.1.6"
authors = [
  { name="Yuri Henrique Galvao", email="yuri@galvao.ca" },
]
description = "A useful package for web scraping with Selenium"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "selenium",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ygalvao/py-easy-scrape"
"Bug Tracker" = "https://github.com/ygalvao/py-easy-scrape/issues"